Fixed Menu Icon on Mobile Devices

--- a/src/components/Header/Navbar.module.css
+++ b/src/components/Header/Navbar.module.css
@@ -81,7 +81,7 @@
 .navbar .ham .hamburgerBtn {
   background-color: black;
   border-radius: 7px;
-  width: 50%;
+  width: 90%;
 }
 
 .hamburgerOptions {
